syntax = "proto3";

package calculator;

option go_package = "/proto/gen;main_pb";

service  Calculator {
    rpc Add(AddRequest) returns (AddResponse);
    rpc GenerateFibonacci (FibonacciRequest) returns (stream FibonacciResponse);
}

message AddRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddResponse {
    int32 sum = 1;
}

message  FibonacciRequest {
    int32 count = 1; // Number of fibonacci numbers to generate
}

message FibonacciResponse  {
    int32 number = 1; // Individual fibonacci number
}